<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"

        app:layout_constraintTop_toTopOf="parent">

        <!-- University Logo -->
        <ImageView
            android:id="@+id/universityLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/university"
            android:layout_marginStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- University Name -->
        <TextView
            android:id="@+id/universityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university_of_reading"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/amarante"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:layout_constraintStart_toEndOf="@id/universityLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="50dp"
        app:cardBackgroundColor="@color/light_purple"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"

            android:padding="15dp">

            <!-- Login Text -->
            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"

                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/purple_500"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <!-- Login Button -->
            <Button
                android:id="@+id/button_Login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_signin"
                android:text="@string/login" />

            <!-- Register Text -->
            <TextView
                android:id="@+id/register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:text="@string/new_user_register"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

