<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Profile"
            app:titleTextColor="@android:color/white" />

        <!-- ScrollView -->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout"
                            android:layout_width="match_parent"
                            android:layout_height="350dp"
                            android:background="@drawable/top_background"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                        </androidx.constraintlayout.widget.ConstraintLayout>


                        <TextView
                            android:id="@+id/textViewName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/george_fields"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@+id/imageView"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/circles"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0"
                            tools:srcCompat="@drawable/circles" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/profile"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                            tools:srcCompat="@drawable/profile" />

                        <TextView
                            android:id="@+id/textViewID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/studentID"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@+id/textViewName"
                            app:layout_constraintStart_toStartOf="@+id/textViewName"
                            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="14dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewID">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="24dp"
                                android:background="@drawable/gradient_background"
                                android:elevation="5dp"

                                android:orientation="vertical"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textViewID">


                                <TextView
                                    android:id="@+id/textViewCourse"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="30dp"
                                    android:drawableStart="@drawable/baseline_menu_book_24"
                                    android:drawablePadding="8dp"
                                    android:gravity="center_vertical"
                                    android:paddingStart="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="16dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/Course_bsc_computer_science"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewLocation"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:drawableStart="@drawable/baseline_location_on_24"
                                    android:drawablePadding="8dp"
                                    android:gravity="center_vertical"
                                    android:paddingStart="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="16dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/location_mps_cs"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewAcademicYear"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:drawableStart="@drawable/baseline_calendar_today_24"
                                    android:drawablePadding="8dp"
                                    android:gravity="center_vertical"
                                    android:paddingStart="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="16dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/academic_year_2"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewLearningTrack"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:drawableStart="@drawable/baseline_trending_up_24"
                                    android:drawablePadding="8dp"
                                    android:gravity="center_vertical"
                                    android:paddingStart="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="16dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/learning_track_undergraduate"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textViewGrade"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="15dp"
                                    android:drawableStart="@drawable/baseline_grade_24"
                                    android:drawablePadding="8dp"
                                    android:gravity="center_vertical"
                                    android:paddingStart="16dp"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="16dp"
                                    android:paddingBottom="8dp"
                                    android:text="@string/grade_distinction"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />


                            </LinearLayout>
                        </ScrollView>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>